@@ -156,6 +156,7 @@ popd
 - [BGBUILD-220] Group names have spaces (to the user), this breaks schema rules for packages
 - [BGBUILD-222] Allow overwrite of uploaded ec2 image
 - [BGBUILD-225] Move PAE configuration parameter to operating system configuration
+- [BGBUILD-224] EBS Plugin Support for CentOS v5.5 and fix for non-integer EBS disk sizes
 
 * Thu May 05 2011 Marek Goldmann <mgoldman@redhat.com> - 0.9.2-1
 - Upstream release: 0.9.2
